# Roman_Literals

./: .gitignore  MANIFEST.in  README.md  RomanLiterals.py  RomanLiteralsJs.py  SortingDict.py  StolenConverter.js  Test_RomanLiterals.py  literals.json  pyproject.toml  requirements.txt  setup.cfg  test_requirements.txt  tox.ini
.github/workflows/: test.yml
src/RomanLiterals/: Converter.py  JsConverter.py  SortingDict.py
tests/: test_RomanLiterals.py
