[metadata]
name = RomanLiterals
description = Convert Numbers into roman literals (and back?)
author = Lucas Weber
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    RomanLiterals
install_requires =
    js2py
    tqdm
python_requires = >=3.7
package_dir =
    =src
zip_safe = no